fix main container overflow;  style nav&task item

--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,5 @@
   display: flex;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
