--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,5 +1,20 @@
 .nav{
     height: 100%;
+    display: grid;
+    grid-template-rows: 35% 65%;
     width: 20vw;
     background-color: #fff;
+    padding: 50px;
+}
+
+.nav__tab{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.nav__tag{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
 }
