--- a/src/features/Tasks/TaskItem.css
+++ b/src/features/Tasks/TaskItem.css
@@ -3,10 +3,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 400px;
+    width: 600px;
     height: 150px;
     padding: 20px;
-    margin: 50px;
+    margin: 25px;
     border-radius: 25px;
 }
 
@@ -15,17 +15,19 @@
 }
 
 .card__checkbox--button{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%
 }
 
 .card__content{
+    height: 100%;
     width: 100%;
 }
 
 .card__controls{
     width: 7em;
+    height: 100%;
     display: flex;
     flex-flow: column;
     align-items: center;
